[gd_scene load_steps=6 format=3 uid="uid://be2ph6eey4l2r"]

[ext_resource type="Script" path="res://Scenes/Playground/Detonator/Detonator.gd" id="1_yja46"]
[ext_resource type="PackedScene" uid="uid://co83bx4ic3dha" path="res://Scenes/Playground/Spark/Spark.tscn" id="2_3pkqg"]
[ext_resource type="Texture2D" uid="uid://7qupujgfjibn" path="res://Ressources/Sprites/Placeholders/PlaceHolder_Circle.png" id="2_cn5er"]
[ext_resource type="Texture2D" uid="uid://boxb7avk34ewm" path="res://Ressources/Sprites/sphereFire_spriteSheet.png" id="3_ust55"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q2avd"]
radius = 50.0

[node name="Detonator" type="Node2D"]
script = ExtResource("1_yja46")
spark_scene = ExtResource("2_3pkqg")

[node name="ClickArea" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_q2avd")

[node name="AreaSprite" type="Sprite2D" parent="ClickArea"]
modulate = Color(1, 0.392157, 0.215686, 1)
scale = Vector2(1.655, 1.655)
texture = ExtResource("2_cn5er")

[node name="SparkSpawn" type="Marker2D" parent="."]
position = Vector2(0, -31)

[node name="FlameSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, 2)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ust55")
hframes = 4
frame = 3

[node name="DetonatorSprite" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ust55")
hframes = 4
